tests/checker/bad/bad_version.scilla
scilla_version 99999

contract Empty ()
